...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:contentDescription="@string/book_photo"
            app:layout_constraintBottom_toTopOf="@+id/bookViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

...

        <TextView
            android:id="@+id/bookViewStatus"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/bookViewDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewTitle"
            tools:text="Status" />

...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewDescription" />

        <TextView
            android:id="@+id/bookViewAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewAuthorHeader"
            tools:text="Jeff Bezos" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewAuthor" />

        <TextView
            android:id="@+id/bookViewISBN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewISBNHeader"
            tools:text="7483960471827" />
...
