...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/isbn_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_imageview" />

        <ImageView
            android:id="@+id/photo_imageview"
...
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/isbn"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/author_edittext"
            app:layout_constraintEnd_toStartOf="@+id/scan_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edittext" />

        <EditText
            android:id="@+id/author_edittext"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/isbn_edittext"
            app:layout_constraintTop_toBottomOf="@+id/title_edittext" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:hint="@string/book_description"
...
